# opkit

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  TODO.txt
data/: .gitignore  .~lock.Activation Function Tests.xlsx#  Activation Function Tests.xlsx  Convolution Gradient.txt  Convolution Kernel Normalization Test  Convolution Notes.xlsx  RMSProp Tests  URLs.txt  points.txt  points2.txt  points_large.txt
demos/: 1D.cpp  CMakeLists.txt  Plot.h  activationTest.cpp  build.sh  cgan.cpp  convolutionTest.cpp  cwgan.cpp  finiteDifferencesTest.cpp  fullyConnectedBackpropTest.cpp  gan.cpp  irisExample.cpp  mnist.cpp  mnistConvolutionExample.cpp  multiLayerConvolutionBackpropTest.cpp  rgbGan.cpp  singleLayerConvolutionTest.cpp  sseNeuralNetworkTest.cpp  test.cpp  wgan.cpp
demos/src/: Convolution1DTest.cpp  NeuralNetworkTestSuite.cpp  activationTest.cpp  finiteDifferencesSSETest.cpp  finiteDifferencesTest.cpp  fullyConnectedBackpropTest.cpp  heterogeneousLayerBackpropTest.cpp  irisExample.cpp  mnistConvolutionExample.cpp  multiLayerConvolutionBackpropTest.cpp  neuralNetworkBatchTest.cpp  singleLayerConvolutionTest.cpp  sseNeuralNetworkTest.cpp
include/: Dataset.h  Error.h  Matrix.h  SparseMatrixWrapper.h  Tensor3D.h  VectorOps.h
include/Acceleration/: Acceleration.h  Acceleration_CPU.h  Acceleration_NVBlas.h  Acceleration_OpenBlas.h
include/CostFunctions/: CategoricalErrorFunction.h  CompoundCostFunction.h  ConvolutionalRegularizer.h  CostFunction.h  CrossEntropyFunction.h  L1Regularizer.h  L2Regularizer.h  SSEFunction.h
include/Functions/: ActivationFunction.h  CategoricalErrorFunction.h  CommonFunctions.h  ConvNeuralNetwork.h  CrossEntropyFunction.h  ErrorFunction.h  Function.h  Layer.h  NeuralNetwork.h  RandomCropLayer.h  SSEFunction.h
include/Functions/NeuralNetworks/: NeuralNetwork.h
include/Functions/NeuralNetworks/Layers/: ActivationLayer.h  CompressedSparseLayer.h  Convolutional1DLayer.h  Convolutional2DLayer.h  ElasticDeformationLayer.h  FullyConnectedLayer.h  Layer.h  MaskedSparseLayer.h  RandomAffineTransformationLayer.h  RandomCropLayer.h  RandomRotationLayer.h  Regularized1DConvolutionalLayer.h  SoftmaxLayer.h
include/Optimizers/: Adam.h  EvolutionaryOptimizer.h  GradientDescent.h  HessianFreeOptimizer.h  HillClimber.h  Optimizer.h  RMSProp.h  SimulatedAnnealing.h
include/Trainers/: Adam.h  EvolutionaryOptimizer.h  GradientDescent.h  HessianFreeOptimizer.h  HillClimber.h  RMSProp.h  SimulatedAnnealing.h  StochasticGradientDescent.h  Trainer.h
include/Utils/: Acceleration.h  BatchIterator.h  Bitmask.h  DataLoader.h  DataNormalizer.h  Interpolation.h  ModelPersistence.h  PrettyPrinter.h  Rand.h  RandomIndexIterator.h  Timer.h
include/acceleration/: Acceleration.h  Acceleration_CPU.h  Acceleration_NVBlas.h  Acceleration_OpenBlas.h
include/graph/: CostFunctions.h  DerivativeMap.h  GradientValidator.h  Gradients.h  Graph.h  GraphAPI.h  GraphSimplifier.h  NN.h  Optimizers.h
include/graph/core/: BinaryFunction.h  ComponentNode.h  Constant.h  Graph.h  GraphAPI.h  ListNode.h  Node.h  UnaryFunction.h  UpdateNode.h  Variable.h
include/graph/ops/: GraphOps_all.h  GraphOps_core.h  GraphOps_functions.h  GraphOps_matrix.h
include/tensor/: Storage.h  Tensor.h  Tensor.old  TensorIO.h  TensorIterator.h  TensorMath.h  TensorOps.h  TensorReductions.h
include/util/: Assert.h  BatchIterator.h  BufferAllocator.h  DataLoader.h  FunctionTraits.h  HeapAllocator.h  Instrumentor.h  Rand.h  RandomIndexIterator.h  ReferenceCount.h  StackTrace.h  Timer.h  TinySet.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Debug.properties  Release.properties  configurations.xml  private.xml
src/: Matrix.cpp  Tensor3D.cpp  main.cpp
src/Functions/: ActivationFunction.cpp  CategoricalErrorFunction.cpp  ConvNeuralNetwork.cpp  ErrorFunction.cpp  Function.cpp  Layer.cpp  NeuralNetwork.cpp  SSEFunction.cpp
src/Trainers/: EvolutionaryOptimizer.cpp  HessianFreeOptimizer.cpp
src/Utils/: PrettyPrinter.cpp
tests/: build.sh  gan_test.cpp  graph_ops_test.cpp  optimizer_test.cpp  storage_test.cpp  tensor_test.cpp
tests/gan_test_files/: db12.txt  dw1.txt  dw12.txt  dw2.txt  dw22.txt  gb12.txt  gb22.txt  grad_db1.txt  grad_dw1.txt  grad_dw2.txt  grad_gb1.txt  grad_gb2.txt  grad_gw1.txt  grad_gw2.txt  gw1.txt  gw12.txt  gw2.txt  gw22.txt  tensorflow_ref.py  testZ.txt  xmb.txt
